--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,17 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/dublininquirer
+    working_directory: ~/inquirer
     docker:
       - image: circleci/ruby:2.5.1
         environment:
           PGHOST: localhost
-          PGUSER: v
+          PGUSER: inquirer
           RAILS_ENV: test
       - image: postgres:9.5
         environment:
-          POSTGRES_USER: dublininquirer
-          POSTGRES_DB: dublininquirer_test
+          POSTGRES_USER: inquirer
+          POSTGRES_DB: inquirer_test
           POSTGRES_PASSWORD: ""
     steps:
       - checkout
@@ -20,7 +20,7 @@ jobs:
       # Restore Cached Dependencies
       - type: cache-restore
         name: Restore bundle cache
-        key: dublininquirer-{{ checksum "Gemfile.lock" }}
+        key: inquirer-{{ checksum "Gemfile.lock" }}
 
       # Bundle install dependencies
       - run: bundle install --path vendor/bundle
@@ -28,7 +28,7 @@ jobs:
       # Cache Dependencies
       - type: cache-save
         name: Store bundle cache
-        key: dublininquirer-{{ checksum "Gemfile.lock" }}
+        key: inquirer-{{ checksum "Gemfile.lock" }}
         paths:
           - vendor/bundle
 
