--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "inquirer",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5"
+    "@rails/webpacker": "^4.0.2"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.3.1"
   }
 }
