brian vs webpacker, cont'd

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ yarn-debug.log*
 .yarn-integrity
 .env
 .ruby-version
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
