--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
     "svelte": "^3.8.1",
-    "svelte-loader": "^2.13.6"
+    "svelte-loader": "^2.13.6",
+    "turbolinks": "^5.2.0",
+    "webpacker-svelte": "^0.1.0"
   },
   "version": "0.1.0",
   "devDependencies": {
