gift subs can't occur for subscribed users'

--- a/config/appsignal.yml
+++ b/config/appsignal.yml
@@ -41,3 +41,4 @@ production:
   ignore_errors:
     - ActiveRecord::RecordNotFound
     - ActionController::RoutingError
+    - Mime::Type::InvalidMimeType
