--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^4.0.7",
+    "@rails/webpacker": "^5.4.2",
     "svelte": "^3.8.1",
     "svelte-loader": "^2.13.6",
     "turbolinks": "^5.2.0",
@@ -13,6 +13,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.8.0"
+    "@webpack-cli/serve": "^1.4.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
