--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dublininquirer-com",
   "private": true,
   "dependencies": {
+    "@hotwired/stimulus": "^3.0.1",
     "esbuild": "^0.14.2",
     "esbuild-svelte": "^0.6.0"
   },
