--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
+    "@hotwired/turbo-rails": "^7.1.0",
     "autoprefixer": "^10.4.1",
     "esbuild": "^0.14.2",
     "esbuild-svelte": "^0.6.0",
