--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "postcss-cli": "^9.1.0",
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.6",
-    "postcss-preset-env": "^7.1.0"
+    "postcss-preset-env": "^7.1.0",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "version": "0.1.0",
   "scripts": {
