--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "^10.4.1",
     "esbuild": "^0.14.2",
     "esbuild-svelte": "^0.6.0",
+    "plyr": "^3.6.12",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "postcss-import": "^14.0.2",
