--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.0",
+    "@stripe/stripe-js": "^1.22.0",
     "autoprefixer": "^10.4.1",
     "esbuild": "^0.14.2",
     "esbuild-svelte": "^0.6.0",
